--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ blinker==1.9.0
 click==8.2.1
 cmudict==1.1.1
 Flask==3.1.1
+gunicorn==23.0.0
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
 pyphen==0.17.2
 setuptools==80.9.0
 textstat==0.7.8
